fixed carousel slide on small device

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -475,7 +475,7 @@ input:focus::placeholder {
       #00d1ff 0%,
       #0073a7 27%,
       #04628f 36%,
-      #0c4161 57%,
+      #0c4161 57%,s
       #122a3f 75%,
       #161b2a 90%,
       #171623 100%
